...
                    ]} 
                  />
              ))}
          </View>

          <Button 
            title={currentIndex === SLIDES.length - 1 ? "Начать" : "Далее"} 
            onPress={handleNext}
            buttonStyle={{ backgroundColor: theme.colors.primary, borderRadius: 16, height: 55, width: '100%' }}
            containerStyle={{ width: '100%' }}
            titleStyle={{ fontWeight: '800' }}
          />
      </View>
...
